feat: init theme_server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node ./src/"
+    "dev": "ts-node ./src/",
+    "test": "mocha -r ts-node/register --exit tests/**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,19 @@
   },
   "homepage": "https://github.com/chenshenhai/noojs#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.3",
+    "@types/should": "^13.0.0",
+    "@types/supertest": "^2.0.10",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.0",
+    "should": "^13.2.3",
+    "supertest": "^5.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/koa": "^2.11.5",
     "koa": "^2.13.0"
   }
 }
