--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node ./src/",
+    "cli:start": "ts-node ./src/cli/",
     "test": "mocha -r ts-node/register --exit tests/**/*.test.ts"
   },
   "repository": {
