--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "bin": "bin/noo.js",
   "scripts": {
-    "dev": "ts-node ./src/",
     "cli:start": "ts-node ./src/cli/",
-    "test": "mocha -r ts-node/register --exit tests/**/*.test.ts"
+    "test": "mocha -r ts-node/register --exit tests/**/*.test.ts",
+    "dev:webpack": "webpack --watch --config scripts/webpack/webpack.dev.config.js",
+    "build:webpack": "webpack -c scripts/webpack/webpack.base.config.js",
+    "build": "rollup -c ./scripts/rollup/rollup.config.js",
+    "dev": "rollup -w -c ./scripts/rollup/rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,19 +23,32 @@
   },
   "homepage": "https://github.com/chenshenhai/noojs#readme",
   "devDependencies": {
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-typescript": "^6.0.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
     "@types/should": "^13.0.0",
     "@types/supertest": "^2.0.10",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
+    "rollup": "^2.32.1",
     "should": "^13.2.3",
     "supertest": "^5.0.0",
+    "ts-loader": "^8.0.6",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "webpack-cli": "^4.1.0",
+    "webpack-merge": "^5.2.0"
   },
   "dependencies": {
     "@types/koa": "^2.11.5",
-    "koa": "^2.13.0"
-  }
+    "commander": "^6.1.0",
+    "koa": "^2.13.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.2.0",
+    "webpack-merge": "^5.2.0"
+  },
+  "files": [
+    "dist"
+  ]
 }
