--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "packages": [
-    "packages/noojs"
+    "packages/@uoo/storage",
+    "packages/@uoo/cli"
   ],
   "command": {
     "version": {
@@ -15,5 +16,5 @@
       "registry": "https://registry.npmjs.org/"
     }
   },
-  "version": "0.0.2"
+  "version": "0.0.1"
 }
