--- a/packages/uoojs/package.json
+++ b/packages/uoojs/package.json
@@ -26,7 +26,6 @@
     "@types/should": "^13.0.0",
     "@types/supertest": "^2.0.10",
     "chai": "^4.2.0",
-    "lerna": "^3.22.1",
     "mocha": "^8.2.0",
     "should": "^13.2.3",
     "supertest": "^5.0.0",
@@ -39,6 +38,9 @@
     "@types/koa": "^2.11.5",
     "commander": "^6.1.0",
     "koa": "^2.13.0",
+    "next": "^10.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.2.0",
     "webpack-merge": "^5.2.0"
