--- a/packages/uoojs/package.json
+++ b/packages/uoojs/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/chenshenhai/uoojs#readme",
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/koa__router": "^8.0.3",
     "@types/mocha": "^8.0.3",
     "@types/should": "^13.0.0",
     "@types/supertest": "^2.0.10",
@@ -35,6 +36,7 @@
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
+    "@koa/router": "^10.0.0",
     "@types/koa": "^2.11.5",
     "commander": "^6.1.0",
     "koa": "^2.13.0",
