feat: rename theme/build

--- a/packages/uoojs/package.json
+++ b/packages/uoojs/package.json
@@ -10,7 +10,7 @@
     "dev": "webpack --watch --config scripts/webpack.dev.config.js",
     "build": "webpack -c scripts/webpack.base.config.js",
     "example:server": "ts-node example/server/index.ts",
-    "example:builder": "ts-node example/builder/index.ts",
+    "example:theme:build": "ts-node example/theme_build/index.ts",
     "example:app": "ts-node example/application/index.ts"
   },
   "repository": {
