--- a/packages/uoojs/package.json
+++ b/packages/uoojs/package.json
@@ -12,7 +12,8 @@
     "example:server": "ts-node example/server/index.ts",
     "example:theme:build": "ts-node example/theme_build/index.ts",
     "example:theme:dev": "ts-node example/theme_dev/index.ts",
-    "example:app": "ts-node example/application/index.ts"
+    "example:app": "ts-node example/application/index.ts",
+    "example:storage": "ts-node example/storage/index.ts"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/koa__router": "^8.0.3",
+    "@types/md5": "^2.2.1",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.10",
     "@types/should": "^13.0.0",
