--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "bin": "dist/bin/uoo.js",
   "scripts": {
     "cli:build": "node ./bin/uoo.js build ./example/theme",
-    "test": "nyc --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
-    "test:cov-html": "nyc --reporter=html mocha -r ts-node/register --exit __tests__/**/*.test.ts",
+    "test": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
     "dev": "webpack --watch --config scripts/webpack.dev.config.js",
     "build": "webpack -c scripts/webpack.base.config.js",
     "example:server": "ts-node example/server/index.ts",
