--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
   "dependencies": {
     "@koa/router": "^10.0.0",
     "@types/koa": "^2.11.5",
+    "@zeit/next-less": "^1.0.1",
     "commander": "^6.1.0",
     "koa": "^2.13.0",
+    "less": "^4.0.0",
     "md5": "^2.3.0",
     "next": "^10.0.3",
     "react": "^17.0.1",
