--- a/packages/yuz-api/package.json
+++ b/packages/yuz-api/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "dist",
+    "index.js"
+  ]
 }
