--- a/packages/yuz/package.json
+++ b/packages/yuz/package.json
@@ -42,7 +42,8 @@
     "ts-loader": "^8.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
-    "webpack-cli": "^4.1.0"
+    "webpack-cli": "^4.1.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
