--- a/packages/yuz/package.json
+++ b/packages/yuz/package.json
@@ -37,6 +37,8 @@
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
     "nyc": "^15.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "should": "^13.2.3",
     "supertest": "^5.0.0",
     "ts-loader": "^8.0.6",
@@ -54,12 +56,14 @@
     "md5": "^2.3.0",
     "next": "^10.0.3",
     "node-sass": "^5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "sass": "^1.30.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.2.0",
     "webpack-merge": "^5.2.0"
+  },
+  "peerDependencies": {
+    "react": "^16.6.0 || ^17",
+    "react-dom": "^16.6.0 || ^17"
   },
   "files": [
     "dist",
