--- a/packages/yuz/package.json
+++ b/packages/yuz/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "cli:build": "node ./bin/yuz.js build ./example/theme",
     "test": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
-    "test:_": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/download.test.ts",
+    "test:_": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/zip.test.ts",
     "dev": "webpack --watch --config scripts/webpack.dev.config.js",
     "build": "webpack -c scripts/webpack.base.config.js",
     "example:server": "ts-node example/server/index.ts",
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/yuzjs/yuz#readme",
   "dependencies": {
     "@koa/router": "^10.0.0",
+    "archiver": "^5.1.0",
     "axios": "^0.21.1",
     "commander": "^6.1.0",
     "extract-zip": "^2.0.1",
@@ -46,6 +47,7 @@
     "webpack-merge": "^5.2.0"
   },
   "devDependencies": {
+    "@types/archiver": "^5.1.0",
     "@types/chai": "^4.2.14",
     "@types/koa": "^2.11.6",
     "@types/koa-compose": "^3.2.5",
