--- a/packages/yuz/package.json
+++ b/packages/yuz/package.json
@@ -42,6 +42,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.30.0",
+    "simple-git": "^2.31.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.2.0",
     "webpack-merge": "^5.2.0"
