feat: update src/doc-engine/github.ts

--- a/packages/yuz/package.json
+++ b/packages/yuz/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "cli:build": "node ./bin/yuz.js build ./example/theme",
     "test": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
-    "test:_": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/doc-engine/github.test.ts",
+    "test:_": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/demo.ts",
     "dev": "webpack --watch --config scripts/webpack.dev.config.js",
     "build": "webpack -c scripts/webpack.base.config.js",
     "example:server": "ts-node example/server/index.ts",
