--- a/packages/yuz/package.json
+++ b/packages/yuz/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "bin": "bin/yuz.js",
   "scripts": {
+		"ci": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
     "cli:build": "node ./bin/yuz.js build ./example/theme",
-    "test": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
-    "test:_": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/demo.ts",
+    "test": "mocha -r ts-node/register --exit __tests__/**/*.test.ts",
+		"test:_": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/demo.ts",
     "dev": "webpack --watch --config scripts/webpack.dev.config.js",
     "build": "webpack -c scripts/webpack.base.config.js",
     "example:server": "ts-node example/server/index.ts",
