--- a/packages/yuz-theme-portal/package.json
+++ b/packages/yuz-theme-portal/package.json
@@ -8,8 +8,13 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "yuz": "^0.0.1-alpha.2"
   },
   "files": [
