--- a/packages/yuz/package.json
+++ b/packages/yuz/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "bin": "bin/yuz.js",
   "scripts": {
-		"ci": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
+    "install-cnpm": "npm i -g cnpm",
+    "install-react": "npm i react@17 react-dom@17",
+    "ci": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
     "cli:build": "node ./bin/yuz.js build ./example/theme",
-    "test": "mocha -r ts-node/register --exit __tests__/**/*.test.ts",
-    "test:all": "mocha -r ts-node/register --exit __tests__/**/*test.ts",
-		"test:_": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/server/index.test.ts",
+    "test": "npm run install-react & mocha -r ts-node/register --exit __tests__/**/*.test.ts",
+    "test:all": "npm run install-react & mocha -r ts-node/register --exit __tests__/**/*test.ts",
+    "test:_": "npm run install-react & nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/server/index.test.ts",
     "dev": "webpack --watch --config scripts/webpack.dev.config.js",
     "build": "webpack -c scripts/webpack.base.config.js",
     "example:server": "ts-node example/server/index.ts",
@@ -39,11 +41,6 @@
     "koa": "^2.13.0",
     "koa-compose": "^4.1.0",
     "md5": "^2.3.0",
-    "next": "^10.0.3",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sass": "^1.30.0",
     "simple-git": "^2.31.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.2.0",
@@ -62,7 +59,10 @@
     "@types/supertest": "^2.0.10",
     "chai": "^4.2.0",
     "mocha": "^8.2.0",
+    "next": "^10.0.5",
+    "node-sass": "^5.0.0",
     "nyc": "^15.1.0",
+    "sass": "^1.32.4",
     "should": "^13.2.3",
     "supertest": "^5.0.0",
     "ts-loader": "^8.0.6",
@@ -70,6 +70,10 @@
     "typescript": "^4.0.3",
     "webpack-cli": "^4.1.0",
     "webpack-node-externals": "^2.5.2"
+  },
+  "peerDependencies": {
+    "react": "^16.6.0 || ^17",
+    "react-dom": "^16.6.0 || ^17"
   },
   "files": [
     "dist",
