deps: add react reac-dom

--- a/packages/yuz/package.json
+++ b/packages/yuz/package.json
@@ -9,9 +9,9 @@
     "install-react": "npm i react@17 react-dom@17",
     "ci": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/**/*.test.ts",
     "cli:build": "node ./bin/yuz.js build ./example/theme",
-    "test": "npm run install-react & mocha -r ts-node/register --exit __tests__/**/*.test.ts",
-    "test:all": "npm run install-react & mocha -r ts-node/register --exit __tests__/**/*test.ts",
-    "test:_": "npm run install-react & nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/server/index.test.ts",
+    "test": "mocha -r ts-node/register --exit __tests__/**/*.test.ts",
+    "test:all": "mocha -r ts-node/register --exit __tests__/**/*test.ts",
+    "test:_": "nyc --reporter=html --reporter=text mocha -r ts-node/register --exit __tests__/server/index.test.ts",
     "dev": "webpack --watch --config scripts/webpack.dev.config.js",
     "build": "webpack -c scripts/webpack.base.config.js",
     "example:server": "ts-node example/server/index.ts",
