--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,7 @@
 {
   "packages": [
     "packages/yuz",
-    "packages/yuz-api",
-    "packages/yuz-theme-portal"
+    "packages/yuz-api"
   ],
   "version": "0.0.1-alpha.2"
 }
