--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   },
   "devDependencies": {
     "lerna": "^3.22.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "typescript": "^4.1.3"
   }
 }
