--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
+  "npmClient": "cnpm",
   "packages": [
     "packages/yuz",
-    "packages/yuz-api"
+    "packages/yuz-api",
+    "packages/yuz-theme-portal"
   ],
   "version": "0.0.1-alpha.2"
 }
