--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "test": "lerna bootstrap && lerna run --scope yuz test"
   },
   "devDependencies": {
+    "@octokit/core": "^3.2.4",
     "lerna": "^3.22.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
