--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -64,5 +64,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     # - run: npm ci
     # - run: npm run build --if-present
-    - run: npm ci
+    - run: npm install
     - run: npm test
