chore: update lerna config

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "test": "lerna bootstrap && lerna run build && lerna run test",
-    "test:yuz": "lerna bootstrap && lerna run build && lerna run --scope yuz test"
+    "test:all": "lerna bootstrap && lerna run build && lerna run test",
+    "test": "lerna bootstrap && lerna run --scope yuz test"
   },
   "devDependencies": {
     "@octokit/core": "^3.2.4",
