chore: add lerna run build

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "test:all": "lerna bootstrap --no-ci && lerna run build && lerna run test",
-    "test": "lerna bootstrap --no-ci && lerna run --scope yuz test"
+    "test": "lerna bootstrap --no-ci && lerna run build && lerna run --scope yuz test"
   },
   "devDependencies": {
     "@octokit/core": "^3.2.4",
