chore: update testing of yuz-theme-portal

--- a/packages/yuz-theme-portal/package.json
+++ b/packages/yuz-theme-portal/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "yuz dev -p 9001 ./",
-    "test": "mocha -r ts-node/register --exit __tests__/**/*.test.ts",
-    "test:all": "mocha -r ts-node/register --exit __tests__/**/*test.ts"
+    "test:all": "mocha -r ts-node/register --exit __tests__/**/*.test.ts"
   },
   "author": "",
   "license": "MIT",
