--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "test": "lerna bootstrap --no-ci && lerna run build && lerna run test",
     "test:yuz": "lerna bootstrap --no-ci && lerna run build && lerna run --scope yuz test",
-    "test:all": "lerna bootstrap --no-ci && lerna run build && lerna run test:all"
+    "test:all": "lerna bootstrap --no-ci && lerna run build && lerna run test:all",
+    "test:local": "lerna bootstrap --npm-client=cnpm && lerna run build && lerna run test:all"
   },
   "devDependencies": {
     "@octokit/core": "^3.2.4",
