--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,22 +50,22 @@ jobs:
     - run: npm install
     - run: npm test
   
-  windows:
+  # windows:
   
-    runs-on: windows-latest
+  #   runs-on: windows-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x]
+  #   strategy:
+  #     matrix:
+  #       node-version: [14.x]
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    # - run: npm ci
-    # - run: npm run build --if-present
-    - run: npm shrinkwrap 
-    - run: npm install
-    - run: npm test
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Use Node.js ${{ matrix.node-version }}
+  #     uses: actions/setup-node@v1
+  #     with:
+  #       node-version: ${{ matrix.node-version }}
+  #   # - run: npm ci
+  #   # - run: npm run build --if-present
+  #   - run: npm shrinkwrap 
+  #   - run: npm install
+  #   - run: npm test
